--- a/pages/Accessories/gaming-speakers.html
+++ b/pages/Accessories/gaming-speakers.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="logo">
-                    <a href="../Accessories/accessories.html">
+                    <a href="../home/home.html">
                         <img src="../home/images/logo-white.png" width="150">
                     </a>
                 </div>
