--- a/pages/products/gaming-eyewear.html
+++ b/pages/products/gaming-eyewear.html
@@ -455,7 +455,7 @@
         <footer class="container-lg">
             <div class="row d-flex justify-content-center align-items-start pt-4 ">
                 <div class="col-3">
-                    <a href="#">
+                    <a href="../home/home.html">
                         <img src="../Accessories/images/logo-white2.png" class="mb-3">
                     </a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
