--- a/pages/products/keyboard-details.html
+++ b/pages/products/keyboard-details.html
@@ -19,7 +19,8 @@
   <link rel="stylesheet" href="../products/styles/header.css">
 
 
-  <title>Alienware - AW510K Full-size Wired Mechanical CHERRY MX Low Profile Red Switch Gaming Keyboard with RGB Back Lighting - Lunar Light - Black -
+  <title>Alienware - AW510K Full-size Wired Mechanical CHERRY MX Low Profile Red Switch Gaming Keyboard with RGB Back
+    Lighting - Lunar Light - Black -
     Shop and Game</title>
 </head>
 
@@ -32,7 +33,7 @@
       <div class="row">
         <div class="col-6">
           <div class="logo">
-            <a href="#">
+            <a href="../home/home.html">
               <img src="../home/images/logo-white.png" width="150">
             </a>
           </div>
@@ -109,7 +110,9 @@
         </div>
       </div>
       <div class="col-6 d-flex flex-column justify-content-center ">
-        <h4>Alienware - AW510K Full-size Wired Mechanical CHERRY MX Low Profile Red Switch Gaming Keyboard with RGB Back Lighting - Lunar LightROCCAT - Burst Pro Lightweight Wired Optical Gaming Mouse with 16K DPI Owl-Eye Sensor and Titan Wheel -
+        <h4>Alienware - AW510K Full-size Wired Mechanical CHERRY MX Low Profile Red Switch Gaming Keyboard with RGB Back
+          Lighting - Lunar LightROCCAT - Burst Pro Lightweight Wired Optical Gaming Mouse with 16K DPI Owl-Eye Sensor
+          and Titan Wheel -
           Black</h4>
         <p> <span class="fw-bold">Model:</span> AW510K-L<span class="fw-bold"> SKU:</span>6385105
         </p>
@@ -133,7 +136,10 @@
             Description <i class="bi bi-text-indent-left"></i>
           </strong>
           <br>
-          Game like a pro with this Alienware low-profile RGB mechanical keyboard. The 6.5-foot cable with a USB connector offers easy access to a wide range of gaming computers, while the Cherry MX low-profile keys offer fast, accurate responses for dominating the battlefield or race track easily. This Alienware low-profile RGB mechanical keyboard has dedicated volume and multimedia control keys for handling playback seamlessly.
+          Game like a pro with this Alienware low-profile RGB mechanical keyboard. The 6.5-foot cable with a USB
+          connector offers easy access to a wide range of gaming computers, while the Cherry MX low-profile keys offer
+          fast, accurate responses for dominating the battlefield or race track easily. This Alienware low-profile RGB
+          mechanical keyboard has dedicated volume and multimedia control keys for handling playback seamlessly.
         </p>
       </div>
     </div>
@@ -153,13 +159,17 @@
                 <p>
                   <span>Description:</i></span>
                   <br>
-                  Game like a pro with this Alienware low-profile RGB mechanical keyboard. The 6.5-foot cable with a USB connector offers easy access to a wide range of gaming computers, while the Cherry MX low-profile keys offer fast, accurate responses for dominating the battlefield or race track easily. This Alienware low-profile RGB mechanical keyboard has dedicated volume and multimedia control keys for handling playback seamlessly.
+                  Game like a pro with this Alienware low-profile RGB mechanical keyboard. The 6.5-foot cable with a USB
+                  connector offers easy access to a wide range of gaming computers, while the Cherry MX low-profile keys
+                  offer fast, accurate responses for dominating the battlefield or race track easily. This Alienware
+                  low-profile RGB mechanical keyboard has dedicated volume and multimedia control keys for handling
+                  playback seamlessly.
                 </p>
 
                 <p>Features:
                   <span class="fw-bold"> <br>
                     Keyboard controls</span><br>
-                    Include mute, play/pause, stop, backward, volume, skip backward and skip forward.
+                  Include mute, play/pause, stop, backward, volume, skip backward and skip forward.
                   <br>
                   <span class="fw-bold">Adjustable keyboard height</span><br>
                   So you can set the keyboard where it is most comfortable for you.
@@ -173,7 +183,7 @@
                 <p>What's Included:
                   <br>
                   <span class="fw-bold">
-                Alienware AW510K Wired Mechanical CHERRY MX Low Profile Red Switch Keyboard with RGB Back </span>
+                    Alienware AW510K Wired Mechanical CHERRY MX Low Profile Red Switch Keyboard with RGB Back </span>
                 </p>
               </div>
             </div>
@@ -197,7 +207,7 @@
                       <div class="specification-col-rows d-flex">
                         <div class="col-6">
                           <p><span class="fw-bold">
-                            Lighting Type:</span></p>
+                              Lighting Type:</span></p>
                         </div>
                         <div class="col-6">
                           <p>RGB</p>
@@ -223,7 +233,7 @@
                       <div class="specification-col-rows d-flex">
                         <div class="col-6">
                           <p><span class="fw-bold">
-                            Operating System Compatibility:</span></p>
+                              Operating System Compatibility:</span></p>
                         </div>
                         <div class="col-6">
                           <p>Windows</p>
@@ -232,7 +242,7 @@
                       <div class="specification-col-rows d-flex">
                         <div class="col-6">
                           <p><span class="fw-bold">
-                            System Requirements:</span></p>
+                              System Requirements:</span></p>
                         </div>
                         <div class="col-6">
                           <p>
@@ -290,7 +300,8 @@
           <a href="#" class="text-decoration-none">
             <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
             <img src="../Accessories/images/key-12.webp">
-            <h4>CORSAIR - K65 RGB Mini Wired 60% Mechanical Cherry MX SPEED Linear Switch Gaming Keyboard with PBT Double-Shot Keycaps - White</h4>
+            <h4>CORSAIR - K65 RGB Mini Wired 60% Mechanical Cherry MX SPEED Linear Switch Gaming Keyboard with PBT
+              Double-Shot Keycaps - White</h4>
           </a>
         </div>
         <div class="product-price-cart">
@@ -318,7 +329,8 @@
           <a href="#" class="text-decoration-none">
             <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
             <img src="../Accessories/images/key-p.jpg">
-            <h4>Keychron Q5 QMK 100 Keys Fully Assembled Knob Custom Mechanical Keyboard - Carbon Black - Red [Q5M1]</h4>
+            <h4>Keychron Q5 QMK 100 Keys Fully Assembled Knob Custom Mechanical Keyboard - Carbon Black - Red [Q5M1]
+            </h4>
           </a>
         </div>
         <div class="product-price-cart">
@@ -346,7 +358,8 @@
           <a href="#" class="text-decoration-none">
             <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
             <img src="../Accessories/images/key-6.webp">
-            <h4>HyperX - Alloy Origins 65% Compact Wired Mechanical Red Linear Switch Gaming Keyboard with RGB Lighting - Black
+            <h4>HyperX - Alloy Origins 65% Compact Wired Mechanical Red Linear Switch Gaming Keyboard with RGB Lighting
+              - Black
             </h4>
           </a>
         </div>
@@ -361,7 +374,8 @@
 
           <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
             <div class="price mt-2">
-              <p>$69.99<br><span class="save" style="font-size:13px;">Save $30</span> <span class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
+              <p>$69.99<br><span class="save" style="font-size:13px;">Save $30</span> <span
+                  class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
             </div>
             <div class="cart mt-2">
               <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -375,7 +389,8 @@
           <a href="#" class="text-decoration-none">
             <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
             <img src="../Accessories/images/key-2.webp">
-            <h4>CORSAIR - K70 Pro Mini Wireless 60% RGB Mechanical Cherry MX SPEED Linear Switch Gaming Keyboard with swappable MX switches - Black</h4>
+            <h4>CORSAIR - K70 Pro Mini Wireless 60% RGB Mechanical Cherry MX SPEED Linear Switch Gaming Keyboard with
+              swappable MX switches - Black</h4>
           </a>
         </div>
         <div class="product-price-cart">
@@ -389,7 +404,8 @@
 
           <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
             <div class="price mt-2">
-              <p>$149.99<br><span class="save" style="font-size:13px;">Save $30</span> <span class="text-decoration-line-through" style="font-size:12px;">$179.99</span></p>
+              <p>$149.99<br><span class="save" style="font-size:13px;">Save $30</span> <span
+                  class="text-decoration-line-through" style="font-size:12px;">$179.99</span></p>
             </div>
             <div class="cart mt-2">
               <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
