--- a/pages/Accessories/accessories.html
+++ b/pages/Accessories/accessories.html
@@ -27,7 +27,7 @@
       <div class="row">
           <div class="col-6">
               <div class="logo">
-                  <a href="#">
+                  <a href="../home/home.html">
                       <img src="../home/images/logo-white.png" width="150">
                   </a>
               </div>
