--- a/pages/desktop/desktop.html
+++ b/pages/desktop/desktop.html
@@ -83,12 +83,12 @@
         </div>
       </header>
 
-    <section class="section-1 d-flex align-items-end">
+      <section class="section-1 d-flex align-items-end">
         <div class="container-lg banner ">
             <div class="row-cols-md-2 d-flex align-items-center flex-wrap justify-content-around m-4 banner-row ">
                 <div class="col-6">
-                    <h1 class="text-white">Gaming Desktops</h1>
-                    <p class="text-white">Lorem ipsum dolor sit amet consectetur Lorem, ipsum, <br>Lorem ipsum dolor sit... </p>
+                    <h1 class="text-white">GAMING DESKTOP</h1>
+                    <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing., <br>Lorem, ipsum dolor... </p>
                 </div>
                 <div class="col-6 banner-image">
                 </div>
