--- a/pages/desktop/categories.html
+++ b/pages/desktop/categories.html
@@ -86,7 +86,7 @@
             <div class="row-cols-md-2 d-flex align-items-center flex-wrap justify-content-around m-4 banner-row ">
                 <div class="col-6">
                     <h1>GAMING DESKTOP</h1>
-                    <p>Graphics Processing Unit (GPU), Random Access Memory, <br>Processor and many more.. </p>
+                    <p>Gaming Desktop, for the porpose of increasing performance in modern<br>computer Games.</p>
                 </div>
                 <div class="col-6 banner-image">
                     <div class="components-banner-bg d-flex justify-content-center mx-auto">
