--- a/pages/desktop/product-2.html
+++ b/pages/desktop/product-2.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="col-6 d-flex flex-column justify-content-center ">
-                <h4>iBUYPOWER Y60 Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3070 Ti - 1TB NVMe SSD - Black
+                <h4>POWER Y60 Gaming Desktop - Intel i7-12700KF - 16GB DDR4 Memory - NVIDIA GeForce RTX 3070 Ti - 1TB NVMe SSD - Black
                 </h4>
                 <p><small><strong>Model: </strong></small> Y60BB2090 <small><strong>SKU: </strong></small> 6500572
                 </p>
