--- a/pages/desktop/product-2.html
+++ b/pages/desktop/product-2.html
@@ -53,7 +53,7 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
                                     <li><a href="../components/components.html" class="dropdown-item">Cards and Components</a></li>
-                                    <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../desktop/categories.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
